# calendar-display

./: .gitignore  Cargo.toml  build.rs  flake.nix  readme.md
calendar-display/: calendar-display-usr1.service  calendar-display-usr1.timer  calendar-display.service  env.example  install.sh
src/: fonts.rs  image_gen.rs  main.rs
src/data/: calendar.rs  datetime.rs  mod.rs  weather.rs
test/: test.ics
